--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,8 +8,9 @@
     %meta(name="keywords" content="todo list, todo, to-do list, to-do, task, task manager, organizer")
     %meta(name="description" content="Simple, elegant todo lists.")
     =stylesheet_link_tag "compiled/screen"
-    =javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"
+    =javascript_include_tag "jquery.min"
     =javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js"
+    =javascript_include_tag "rails"
     =render :partial => "/google_analytics"
     =csrf_meta_tag
   %body
